--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
         "@clerk/nextjs": "^5.2.14",
         "@clerk/themes": "^2.1.18",
         "@lexical/react": "^0.17.0",
+        "@liveblocks/client": "^2.4.0",
+        "@liveblocks/node": "^2.4.0",
+        "@liveblocks/react": "^2.4.0",
+        "@liveblocks/react-lexical": "^2.4.0",
+        "@liveblocks/react-ui": "^2.4.0",
         "@radix-ui/react-slot": "^1.1.0",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "jsm-editor": "^0.0.12",
+        "lexical": "^0.17.0",
         "lucide-react": "^0.424.0",
         "next": "14.2.5",
         "react": "^18",
